5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1595_1571.log
== TEST (2019-04-02 00:16:26) 
-- CODE:
var= "fogo nos racistas"
print(fogo nos racistas.upper())
-- ERROR:
File "XXXX", line 2
    print(fogo nos racistas.upper())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:16:53) 
-- CODE:
var= "fogo nos racistas"
print"fogo nos racistas.upper()"
-- ERROR:
File "XXXX", line 2
    print"fogo nos racistas.upper()"
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:17:03) 
-- CODE:
var="fogo nos racistas"
print"fogo nos racistas.upper()"
-- ERROR:
File "XXXX", line 2
    print"fogo nos racistas.upper()"
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:17:10) 
-- CODE:
var="fogo nos racistas"
print "fogo nos racistas.upper()"
-- ERROR:
File "XXXX", line 2
    print "fogo nos racistas.upper()"
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:17:40) 
-- CODE:
var="fogo nos racistas"
print "var.upper()"
-- ERROR:
File "XXXX", line 2
    print "var.upper()"
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:17:43) 
-- CODE:
var="fogo nos racistas"
print "var.upper()
-- ERROR:
File "XXXX", line 2
    print "var.upper()
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:17:56) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- OUTPUT:
FOGO NOS RACISTAS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:18:09) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- EXECUTION TIME:
0.124383
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
FOGO NOS RACISTAS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:18:27) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- OUTPUT:
FOGO NOS RACISTAS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:18:29) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- EXECUTION TIME:
0.138194
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
FOGO NOS RACISTAS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:18:35) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- OUTPUT:
FOGO NOS RACISTAS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:19:24) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- OUTPUT:
FOGO NOS RACISTAS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:19:25) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- EXECUTION TIME:
0.184745
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
FOGO NOS RACISTAS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:19:38) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- EXECUTION TIME:
0.182031
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
FOGO NOS RACISTAS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:19:39) 
-- CODE:
var="fogo nos racistas"
print(var.upper())
-- OUTPUT:
FOGO NOS RACISTAS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:20:21) 
-- CODE:
var=input("fogo nos racistas")
print(var.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:20:51) 
-- CODE:
var=input("fogo nos racistas:")
print(input(var.upper()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(var.upper()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:20:54) 
-- CODE:
var=input("fogo nos racistas:")
print(input(var.upper()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(input(var.upper()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:26) 
-- CODE:
var=input("fogo nos racistas:")
print(var.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:32) 
-- CODE:
var=input("fogo nos racistas")
print(var.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:42) 
-- CODE:
var = input("fogo nos racistas")
print(var.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:43) 
-- CODE:
var = input("fogo nos racistas")
print(var.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:22:03) 
-- CODE:
var = "fogo nos racistas"
print(var.upper())
-- OUTPUT:
FOGO NOS RACISTAS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:22:05) 
-- CODE:
var = "fogo nos racistas"
print(var.upper())
-- EXECUTION TIME:
0.134132
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
FOGO NOS RACISTAS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:22:46) 
-- CODE:
var = "fogo nos racistas"
print(var.upper())
-- OUTPUT:
FOGO NOS RACISTAS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:32:25) 
-- CODE:
texto = input"digite uma mensagem"
print(texto.upper())
-- ERROR:
File "XXXX", line 1
    texto = input"digite uma mensagem"
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:32:28) 
-- CODE:
texto = input"digite uma mensagem"
print(texto.upper())
-- ERROR:
File "XXXX", line 1
    texto = input"digite uma mensagem"
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:32:44) 
-- CODE:
texto = input("digite uma mensagem")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:32:58) 
-- CODE:
texto = input("digite uma mensagem")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:33:01) 
-- CODE:
texto = input("digite uma mensagem")
print(texto.upper())
-- EXECUTION TIME:
0.130942
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
